--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>${mapstruct.version}</version>
         </dependency>
 
+        <!-- EMAIL -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- OpenAPI / Swagger -->
         <dependency>
             <groupId>org.springdoc</groupId>
