--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,11 @@ spring.sql.init.continue-on-error=true
 # ===================================
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=alexisxscfl@gmail.com
+spring.mail.password=lemejwsajnetdalp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
