--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 # ===================================
 # Datasource MySQL
 # ===================================
@@ -31,7 +30,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=alexisxscfl@gmail.com
-spring.mail.password=lemejwsajnetdalp
+spring.mail.username=${SPRING_MAIL_USER}
+spring.mail.password=${SPRING_MAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
