--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # Datasource MySQL
 # ===================================
 spring.datasource.url=jdbc:mysql://localhost:3308/LeeyApi?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=usuario
-spring.datasource.password=deadmau5
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 
 # ===================================
 # JPA / Hibernate
